--- a/API/drive/vids/Building A Simple App That Can Access Google Drive/AngularApp/angular.json
+++ b/API/drive/vids/Building A Simple App That Can Access Google Drive/AngularApp/angular.json
@@ -78,7 +78,7 @@
             },
             "development": {
               "optimization": false,
-              "sourceMap": true,
+              "sourceMap": false,
               "poll": 2500,
               "verbose": false,
               "watch": true
