--- a/API/drive/vids/Building A Simple App That Can Access Google Drive/AngularApp/angular.json
+++ b/API/drive/vids/Building A Simple App That Can Access Google Drive/AngularApp/angular.json
@@ -82,7 +82,41 @@
 							"poll": 2500,
 							"verbose": false,
 							"watch": true
-						}
+						},
+						"playground": {
+							"fileReplacements": [
+								{
+									"replace": "src/app/website.ts",
+									"with": "src/app/database/website-playground-dev.ts"
+								},
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.drive.dev.ts"
+								}								
+							],							
+							"optimization": false,
+							"sourceMap": false,
+							"poll": 2500,
+							"verbose": false,
+							"watch": true
+						},						
+						"upload": {
+							"fileReplacements": [
+								{
+									"replace": "src/app/website.ts",
+									"with": "src/app/database/website-upload-dev.ts"
+								},
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.drive.dev.ts"
+								}								
+							],							
+							"optimization": false,
+							"sourceMap": false,
+							"poll": 2500,
+							"verbose": false,
+							"watch": true
+						}						
 					}
 				},
 				"playground": {
@@ -97,7 +131,7 @@
 							},
 							{
 								"replace": "src/environments/environment.ts",
-								"with": "src/environments/environment.playground.dev.ts"
+								"with": "src/environments/environment.drive.dev.ts"
 							}
 						],
 						"index": "src/index.html",
@@ -159,7 +193,7 @@
 							"watch": true
 						}
 					}
-				},
+				},			
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"options": {
@@ -174,8 +208,13 @@
 							"port": 8000,
 							"liveReload": true
 						},
+						"upload": {
+							"browserTarget": "AngularApp:drive:upload",
+							"port": 8000,
+							"liveReload": true
+						},						
 						"playground": {
-							"browserTarget": "AngularApp:playground:development",
+							"browserTarget": "AngularApp:drive:playground",
 							"port": 8000,
 							"liveReload": false
 						}						
