--- a/API/bigquery/AngularApp/angular.json
+++ b/API/bigquery/AngularApp/angular.json
@@ -124,6 +124,23 @@
 							"poll": 2500,
 							"verbose": false,
 							"watch": true
+                        },
+						"dataset": {
+							"fileReplacements": [
+								{
+									"replace": "src/app/website.ts",
+									"with": "src/app/database/website-dataset-dev.ts"
+								},
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.bigquery.dev.ts"
+								}
+							],
+							"optimization": false,
+							"sourceMap": true,
+							"poll": 2500,
+							"verbose": false,
+							"watch": true
                         }
 					}
 				},
@@ -145,6 +162,9 @@
 						"play": {
 							"browserTarget": "AngularApp:bigquery:play"
                         },
+                        "dataset": {
+							"browserTarget": "AngularApp:bigquery:dataset"
+                        }
 					}
 				},
 				"extract-i18n": {
