--- a/API/bigquery/AngularApp/package.json
+++ b/API/bigquery/AngularApp/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "ag-grid-angular": "^24.1.0",
+    "ag-grid-community": "^24.1.0",
     "editorconfig": "^0.15.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
