--- a/API/bigquery/AngularApp/angular.json
+++ b/API/bigquery/AngularApp/angular.json
@@ -11,6 +11,9 @@
                 },
                 "@schematics/angular:component": {
                     "skipTests": true
+                },
+                "@schematics/angular": {
+                    "skipTests": true
                 }
             },
             "root": "",
