--- a/API/bigquery/AngularApp/package.json
+++ b/API/bigquery/AngularApp/package.json
@@ -32,8 +32,10 @@
     "@angular/compiler-cli": "~11.0.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.1",
+    "javascript-obfuscator": "^2.10.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "webpack-obfuscator": "^3.2.0"
   }
 }
