--- a/API/bigquery/AngularApp/testing/e2e/Gemfile
+++ b/API/bigquery/AngularApp/testing/e2e/Gemfile
@@ -1,12 +1,11 @@
 # frozen_string_literal: true
 
+
 source "https://rubygems.org"
 
 git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
-
-
 # frozen_string_literal: true
 
 gem 'capybara'
@@ -17,6 +16,8 @@ gem 'rake'
 gem 'percy-capybara', '~> 4.3.3'
 gem 'sauce_whisk'
 gem 'selenium-webdriver'
-if ENV['CI'] then
-  gem 'selenium-webdriver'
-end
+gem 'table_print'
+gem "eventmachine_httpserver", github: "eventmachine/evma_httpserver"
+gem 'puffing-billy', :group => :test
+
+
