--- a/API/bigquery/AngularApp/package.json
+++ b/API/bigquery/AngularApp/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "angular-app",
+  "name": "angular-scss-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +19,6 @@
     "@angular/router": "~11.0.5",
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
-    "editorconfig": "^0.15.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -31,11 +28,9 @@
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.1",
-    "javascript-obfuscator": "^2.10.1",
+    "codelyzer": "^6.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "webpack-obfuscator": "^3.2.0"
+    "typescript": "~4.0.2"
   }
 }
