--- a/API/bigquery/AngularApp/testing/e2e/.bundle/config
+++ b/API/bigquery/AngularApp/testing/e2e/.bundle/config
@@ -1,2 +1,4 @@
 ---
-BUNDLE_PATH: "C:\\Users\\oluod\\My_Notebook\\Google\\API\\bigquery\\AngularApp\\testing\\e2e"
+BUNDLE_PATH: "vendor\\\\\\\\bundle"
+BUNDLE_FORCE_RUBY_PLATFORM: "true"
+BUNDLE_BUILD__EVENTMACHINE: "--with-ssl-dir=C:\\Users\\oluod\\My_Notebook\\unneeded\\OpenSSL-Win64"
