--- a/API/bigquery/AngularApp/tsconfig.json
+++ b/API/bigquery/AngularApp/tsconfig.json
@@ -1,13 +1,16 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "compileOnSave": false,
+  "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "noImplicitAny":false,
+    "suppressImplicitAnyIndexErrors": true,
     "experimentalDecorators": true,
+    "removeComments": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es5",
