--- a/API/bigquery/AngularApp/package.json
+++ b/API/bigquery/AngularApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-scss-app",
+  "name": "angular-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -9,25 +9,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.5",
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
-    "@angular/core": "~11.0.5",
-    "@angular/forms": "~11.0.5",
-    "@angular/platform-browser": "~11.0.5",
-    "@angular/platform-browser-dynamic": "~11.0.5",
-    "@angular/router": "~11.0.5",
-    "ag-grid-angular": "^24.1.0",
-    "ag-grid-community": "^24.1.0",
+    "@angular/animations": "~11.0.7",
+    "@angular/common": "~11.0.7",
+    "@angular/compiler": "~11.0.7",
+    "@angular/core": "~11.0.7",
+    "@angular/forms": "~11.0.7",
+    "@angular/platform-browser": "~11.0.7",
+    "@angular/platform-browser-dynamic": "~11.0.7",
+    "@angular/router": "~11.0.7",
+    "ag-grid-angular": "^25.0.0",
+    "ag-grid-community": "^25.0.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.5",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "~0.1100.6",
+    "@angular/cli": "~11.0.6",
+    "@angular/compiler-cli": "~11.0.7",
+    "@types/node": "^12.19.12",
     "codelyzer": "^6.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
