UPDATE, component.ts support static nest and application of flexbox, although there isnt a cms-friendly way to take advantage of it yet

--- a/API/bigquery/AngularApp/angular.json
+++ b/API/bigquery/AngularApp/angular.json
@@ -140,7 +140,8 @@
                         "browserTarget": "AngularApp:bigquery:play",
                         "port": 8000,
                         "liveReload": true,
-                        "hmr": false
+                        "hmr": true,
+                        "verbose":true
                     },
                     "configurations": {
                         "production": {
