UPDATE adding and removing elements as needed however breaking the component.ts

--- a/API/bigquery/AngularApp/angular.json
+++ b/API/bigquery/AngularApp/angular.json
@@ -141,7 +141,7 @@
                         "port": 8000,
                         "liveReload": true,
                         "hmr": true,
-                        "verbose":true
+                        // "verbose":true
                     },
                     "configurations": {
                         "production": {
