--- a/API/bigquery/AngularApp/angular.json
+++ b/API/bigquery/AngularApp/angular.json
@@ -148,15 +148,19 @@
                             "browserTarget": "AngularApp:bigquery:production"
                         },
                         "play": {
+                            "port": 8000,
                             "browserTarget": "AngularApp:bigquery:play"
                         },
                         "dataset": {
+                            "port": 8001,
                             "browserTarget": "AngularApp:bigquery:dataset"
                         },
                         "regularTables": {
+                            "port": 8002,
                             "browserTarget": "AngularApp:bigquery:regularTables"
                         },
                         "tableSchemas": {
+                            "port": 8003,
                             "browserTarget": "AngularApp:bigquery:tableSchemas"
                         }
                     }
