--- a/certifications/google_developer_platform/AngularApp/package.json
+++ b/certifications/google_developer_platform/AngularApp/package.json
@@ -9,28 +9,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.9",
-    "@angular/common": "~11.0.9",
-    "@angular/compiler": "~11.0.9",
-    "@angular/core": "~11.0.9",
-    "@angular/forms": "~11.0.9",
-    "@angular/platform-browser": "~11.0.9",
-    "@angular/platform-browser-dynamic": "~11.0.9",
-    "@angular/router": "~11.0.9",
+    "@angular/animations": "~11.1.0",
+    "@angular/common": "~11.1.0",
+    "@angular/compiler": "~11.1.0",
+    "@angular/core": "~11.1.0",
+    "@angular/forms": "~11.1.0",
+    "@angular/platform-browser": "~11.1.0",
+    "@angular/platform-browser-dynamic": "~11.1.0",
+    "@angular/router": "~11.1.0",
     "@deck.gl/core": "^8.3.14",
     "@deck.gl/google-maps": "^8.3.14",
     "@deck.gl/layers": "^8.3.14",
     "ag-grid-angular": "^25.0.0",
     "ag-grid-community": "^25.0.0",
+    "angular-hammer": "^2.2.0",
+    "node-static": "^0.7.10",
     "rxjs": "~6.6.0",
+    "socket.io": "^2.4.1",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.7",
-    "@angular/cli": "~11.0.7",
-    "@angular/compiler-cli": "~11.0.9",
-    "@types/node": "^12.19.12",
+    "@angular-devkit/build-angular": "~0.1101.0",
+    "@angular/cli": "~11.1.0",
+    "@angular/compiler-cli": "~11.1.0",
+    "@types/node": "^12.19.15",
     "codelyzer": "^6.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
