--- a/certifications/google_developer_platform/AngularApp/angular.json
+++ b/certifications/google_developer_platform/AngularApp/angular.json
@@ -40,7 +40,9 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
                         "aot": true,
-                        "assets": [],
+                        "assets": [
+                            "src/assets"
+                        ],
                         "styles": [
                             "src/styles.scss"
                         ],
@@ -64,6 +66,7 @@
                                     "with": "src/environments/environment.prod.ts"
                                 }
                             ],
+                            "assets": [],
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": false,
@@ -107,6 +110,18 @@
                                     "with": "src/environments/environment.gdp.dev.ts"
                                 }
                             ]
+                        },
+                        "webRTC": {
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/app/website.ts",
+                                    "with": "src/app/database/website-webRTC-dev.ts"
+                                },
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.gdp.dev.ts"
+                                }
+                            ]
                         }
                     }
                 },
@@ -127,6 +142,9 @@
                         },
                         "googleMaps": {
                             "browserTarget": "AngularApp:bigquery:googleMaps"
+                        },
+                        "webRTC": {
+                            "browserTarget": "AngularApp:bigquery:webRTC"
                         }
                     }
                 },
