--- a/API/bigquery/ML/AngularApp/angular.json
+++ b/API/bigquery/ML/AngularApp/angular.json
@@ -123,6 +123,18 @@
                                     "with": "src/environments/environment.bigquery.dev.ts"
                                 }
                             ]
+                        },
+                        "bigqueryML": {
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/app/website.ts",
+                                    "with": "src/app/cms/website-bigqueryML-dev.ts"
+                                },
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.bigquery.dev.ts"
+                                }
+                            ]
                         }
 
 
@@ -149,6 +161,9 @@
                         },
                         "get_metadata": {
                             "browserTarget": "AngularApp:bigquery:get_metadata"
+                        },
+                        "bigqueryML": {
+                            "browserTarget": "AngularApp:bigquery:bigqueryML"
                         }
 
 
